--- a/HOMEPAGE/templates/register.html
+++ b/HOMEPAGE/templates/register.html
@@ -19,7 +19,7 @@
                         <h4 class="card-title mt-3 text-center">Create Account</h4>
                         <p class="text-center">Get started with your free account</p>
                         <p>
-                            <a href="#" class="btn btn-block btn-outline-light"><i class="fab fa-google"></i> Login with Google</a>
+                            <a href="#" class="btn btn-block btn-outline-light"><i class="fab fa-google"></i>Register with Google</a>
                         </p>
                         <p class="divider-text">
                             <span class="bg-dark">OR</span>
@@ -29,7 +29,7 @@
                             {{ form.as_p }}
                             <!-- Add margin-top to the button -->
                             <button type="submit" class="btn btn-primary btn-block w-100 mt-3">Create Account</button>
-                            <p class="text-center mt-3">Have an account? <a href="#" class="text-primary">Log In</a></p>                                                                 
+                            <p class="text-center mt-3">Have an account? <a href="{% url 'login' %}" class="text-primary">Log In</a></p>                                                                 
                         </form>
                     </article>
                 </div> <!-- card.// -->
