--- a/HOMEPAGE/templates/homepage.html
+++ b/HOMEPAGE/templates/homepage.html
@@ -11,5 +11,12 @@
 <body>
     <h1>Hello World!!!</h1>
     <h2>Whatup Sawaab</h2>
+
+    <pre>NOtes
+
+        1. do not store banking information. tokens between client and API. that too saved in yours device.
+
+
+    </pre>
 </body>
 </html>
