--- a/HOMEPAGE/templates/login.html
+++ b/HOMEPAGE/templates/login.html
@@ -1,52 +1,21 @@
+{%extends "main.html"%}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login</title>
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <!-- Custom CSS -->
-    <link rel="stylesheet" href="{% static 'register.css' %}">
-</head>
-<body class="bg-dark text-light">
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card bg-dark text-light mt-5 shadow">
-                    <article class="card-body mx-auto" style="max-width: 400px;">
-                        <h4 class="card-title mt-3 text-center">Login</h4>
-                        <p class="text-center">Sign in to your account</p>
-                        <p>
-                            <a href="#" class="btn btn-block btn-outline-light"><i class="fab fa-google"></i> Login with Google</a>
-                        </p>
-                        <p class="divider-text">
-                            <span class="bg-dark">OR</span>
-                        </p>
-                        <form method="POST" action="{% url 'login' %}">
-                            {% csrf_token %}
-                            <div class="form-group input-group mb-3">
-                                <span class="input-group-text bg-dark border-secondary text-light"> <i class="fa fa-envelope"></i> </span>
-                                <input name="username" class="form-control bg-dark text-light border-secondary" placeholder="Email address" type="email">
-                            </div> <!-- form-group// -->
-                            <div class="form-group input-group mb-3">
-                                <span class="input-group-text bg-dark border-secondary text-light"> <i class="fa fa-lock"></i> </span>
-                                <input name="password" class="form-control bg-dark text-light border-secondary" placeholder="Password" type="password">
-                            </div> <!-- form-group// -->
-                            <div class="form-group">
-                                <button type="submit" class="btn btn-primary btn-block w-100">Login</button>
-                            </div> <!-- form-group// -->
-                            <p class="text-center mt-3">Not signed up? <a href="{% url 'register' %}" class="text-primary">Create an account</a></p>                                                                 
-                        </form>
-                    </article>
-                </div> <!-- card.// -->
-            </div>
-        </div>
-    </div> 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- FontAwesome -->
-    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-</body>
-</html>
+{%block content%}
+<form method="POST" action="{% url 'login' %}">
+    {% csrf_token %}
+
+        
+
+    
+
+    <div>
+        {{ form.as_p }}
+    </div>
+    
+    
+
+    <button type="submit">Sign In</button>
+</form>
+<script src="{%static 'loginPage.js'%}"></script>
+
+{%endblock%}
